# amazon-gamelift-light-testing

./: CMakeLists.txt  main.cpp
src/: GameLiftServer.cpp  GameLiftServer.h  main.cpp
